--- a/QMET_Activity.html
+++ b/QMET_Activity.html
@@ -814,7 +814,7 @@ color-5.css
 <body class="dark">
 	<div class="aside">
     <div class="logo">
-        <a href="index.html">QMET</a>
+        <a href="https://tjdgus5160.github.io/QMET_HOME">QMET</a>
     </div>
     <div class="nav-toggler">
         <span></span>
