--- a/QMET_Activity.html
+++ b/QMET_Activity.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Random Programming Languages Carousel</title>
+  <title>QMET</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Quicksand Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
@@ -820,11 +820,11 @@ color-5.css
         <span></span>
     </div>
     <ul class="nav">
-        <li><a href="https://tjdgus5160.github.io/QMET_HOME" class="active"><i class="fa fa-home"></i>Home</a></li>
+        <li><a href="https://tjdgus5160.github.io/QMET_HOME"><i class="fa fa-home"></i>Home</a></li>
         <li><a href="https://tjdgus5160.github.io/QMET_Professor"><i class="fa fa-user"></i>Professor</a></li>
         <li><a href="https://tjdgus5160.github.io/QMET_Members"><i class="fa fa-users"></i>Members</a></li>
         <li><a href="https://tjdgus5160.github.io/QMET_Publications"><i class="fa fa-file-text"></i>Publications</a></li>
-        <li><a href="https://tjdgus5160.github.io/QMET_Activity"><i class="fa fa-briefcase"></i>Activity</a></li>
+        <li><a href="https://tjdgus5160.github.io/QMET_Activity"class="active"><i class="fa fa-briefcase"></i>Activity</a></li>
     </ul>
 </div>
     <div class="main-container">
