--- a/QMET_Professor.html
+++ b/QMET_Professor.html
@@ -458,8 +458,8 @@ color-5.css
         <span></span>
     </div>
     <ul class="nav">
-        <li><a href="https://tjdgus5160.github.io/QMET_HOME" class="active"><i class="fa fa-home"></i>Home</a></li>
-        <li><a href="https://tjdgus5160.github.io/QMET_Professor"><i class="fa fa-user"></i>Professor</a></li>
+        <li><a href="https://tjdgus5160.github.io/QMET_HOME"><i class="fa fa-home"></i>Home</a></li>
+        <li><a href="https://tjdgus5160.github.io/QMET_Professor" class="active"><i class="fa fa-user"></i>Professor</a></li>
         <li><a href="https://tjdgus5160.github.io/QMET_Members"><i class="fa fa-users"></i>Members</a></li>
         <li><a href="https://tjdgus5160.github.io/QMET_Publications"><i class="fa fa-file-text"></i>Publications</a></li>
         <li><a href="https://tjdgus5160.github.io/QMET_Activity"><i class="fa fa-briefcase"></i>Activity</a></li>
