--- a/QMET_Professor.html
+++ b/QMET_Professor.html
@@ -473,6 +473,7 @@ color-5.css
             <section class="about section " id="about">
                 <div class="container">
                     <div class="row">
+                        <div style=margin-top:20px></div>
                         <div class="section-title padd-15">
                             <h2>Professor</h2>
                         </div>
