--- a/QMET_Publications.html
+++ b/QMET_Publications.html
@@ -462,7 +462,7 @@ color-5.css
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
-                            <h2>Paper</h2>
+                            <h2>Publications</h2>
                         </div>
                     </div>
 
