--- a/QMET_HOME.html
+++ b/QMET_HOME.html
@@ -620,16 +620,36 @@ document.querySelector('.hire-me').addEventListener('click', function(){
 
 /* Activating Mobile Menu */
 
+// 요소 존재 확인
 const navTogglerBtn = document.querySelector('.nav-toggler');
 const aside = document.querySelector('.aside');
 
-navTogglerBtn.addEventListener('click', () => { asideSectionTogglerBtn(); })
+if (!navTogglerBtn) {
+    console.error('nav-toggler 버튼을 찾을 수 없습니다.');
+}
+if (!aside) {
+    console.error('aside 요소를 찾을 수 없습니다.');
+}
+
+// 클릭 이벤트 확인
+navTogglerBtn.addEventListener('click', (e) => {
+    console.log('토글 버튼이 클릭되었습니다.');
+    asideSectionTogglerBtn();
+});
 
 function asideSectionTogglerBtn(){
+    console.log('토글 함수가 실행되었습니다.');
     aside.classList.toggle('open');
     navTogglerBtn.classList.toggle('open');
-    for(let i = 0; i < totalSection; i++) { allSection[i].classList.toggle('open'); }
+    
+    for(let i = 0; i < totalSection; i++) { 
+        allSection[i].classList.toggle('open'); 
+    }
+    
+    // 현재 상태 확인
+    console.log('Aside 클래스:', aside.className);
 }
+
 
 
 
